working on layout

--- a/config.json
+++ b/config.json
@@ -12,9 +12,9 @@
 		],
 		"sheet": [
 			{
-				"id": "",
-				"gid": "",
-				"filepath": ""
+				"id": "1VAo40vh_bo06weTn6bQ2RNJMbdk_RAk__xuh7tlRI5Q",
+				"gid": "0",
+				"filepath": "src/assets/data/arrangement.csv"
 			}
 		]
 	}
