--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "node": "12.18.3"
   },
   "dependencies": {
+    "intersection-observer": "^0.11.0",
     "lodash.debounce": "4.0.8",
     "nouislider": "14.2.0",
+    "scrollama": "^2.2.1",
     "superagent": "5.2.2"
   },
   "devDependencies": {
