added rough intro

--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
 				"filepath": "data/patrons.json"
 			},
 			{
-				"id": "",
+				"id": "1u2pIan36fU9WcxhUet5X9gkg7k3SO1yPw1mKCYLHkrw",
 				"filepath": ""
 			}
 		],
